# Ro-s-ChronoTrace

./: .gitignore  AGENTS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  NEXT_STEPS.md  PHASE_2_COMPLETION_SUMMARY.md  PLAN.md  README.md  index.html  jest.config.js  package-lock.json  package.json  vite.config.ts  状态条.md  进程条.md
.claude/: settings.local.json
.github/workflows/: release-exe.yml
.specify/memory/: constitution.md
docs/: release.md
scripts/: release.mjs  start-vite-if-needed.mjs  sync-version.mjs
specs/001-digital-diary/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-digital-diary/checklists/: requirements.md
specs/001-digital-diary/contracts/: api.yaml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_settings.rs  lib.rs  main.rs  types.rs
src-tauri/src/capture/: mod.rs  screenshot.rs  window.rs
src-tauri/src/data/: categories.rs  database.rs  export.rs  idle.rs  mod.rs  process_samples.rs  screenshot.rs  search.rs  time_entries.rs  time_entries_tests.rs  window_activity.rs
src-tauri/src/data/migrations/: V1__initial_schema.sql  V2__categories.sql  V3__process_samples.sql
src-tauri/src/idle/: detection.rs  mod.rs
src-tauri/target-alt/: .rustc_info.json
src-tauri/tests/: command_tests.rs  database_tests.rs  filesystem_tests.rs  mod.rs  performance_tests.rs
src/components/capture/: StatusIndicator.tsx
src/components/export/: ExportButton.tsx
src/components/idle/: IdlePrompt.test.tsx  IdlePrompt.tsx
src/components/search/: SearchBar.test.tsx  SearchBar.tsx  TodaySearchBar.test.tsx  TodaySearchBar.tsx
src/components/timeline/: CategorySelector.tsx  EditEntryDialog.tsx  EntryDialog.test.tsx  EntryDialog.tsx  HoverInsightsTooltip.test.tsx  HoverInsightsTooltip.tsx  Navigation.tsx  ProcessUsageTooltip.tsx  ScreenshotPreview.tsx  TimeEntryDialog.tsx  Timeline.test.tsx  Timeline.tsx  TimerInput.tsx
src/pages/: TimelineView.tsx
src/services/: api.ts  store.ts  types.ts  updater.test.ts  updater.ts
