[package]
name = "digital-diary"
version = "0.1.0"
description = "Desktop time-tracking application with automated context capture"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-dialog = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1.0", features = ["full"] }
chrono = "0.4"
dirs = "5.0"
windows-capture = "1.5.0"
once_cell = "1.19"
rdev = "0.5.3"
specta = { version = "2.0.0-rc.22", features = ["derive", "function"] }
specta-typescript = "0.0.9"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
